<resources>
    <string name="app_name" translatable="false">PassLocker</string>
    <string name="auth_keys">Authentication Keys</string>
    <string name="passwords">Passwords</string>
    <string name="language">Language</string>
    <string name="uppercaseOption">Uppercase</string>
    <string-array name="translation_options">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string name="specialCharOption">Special characters</string>
    <string name="numbersOption">Numbers [0-9]</string>
    <string name="passwordOptions">Password options:</string>
    <string name="generateButton">Generate</string>
    <string name="titleInput">Title</string>
    <string name="passswordInput">Password</string>
    <string name="notesInput">Notes (Optional)</string>
    <string name="urlInput">URL (Optional)</string>
    <string name="saveButton">Save</string>
    <string name="gotoCreateButton">Create Password</string>
    <string name="gotoListButton">Show Passwords</string>
    <string name="show_password">Show</string>
    <string name="signInException">Wrong credentials</string>
    <string name="registerUserException">User is already registered</string>
    <string name="registerPasswordException">Passwords don\'t match</string>
    <string name="okButton">Ok</string>
    <string name="registerButton">Register</string>
    <string name="confirmPasswordInput">Confirm Password</string>
    <string name="usernameInput">Username</string>
    <string name="loginButton">Sign In</string>
    <string name="emptyPasswordFields">You must introduce a password and a title</string>
    <string name="successGeneration">Password generated successfully</string>
    <string name="successSave">Password saved succesfully</string>
    <string name="hidePassword">Hide</string>
    <string name="lengthTag">Length:</string>
    <string name="generatePasswordException">Invalid password length</string>
    <string name="deleteButton">Delete</string>
    <string name="keyStoreError">Error loading Key Store</string>
    <string name="passwordRegistration">Error processing your password</string>
    <string name="registerSuccess">Register Success</string>
    <string name="loginSuccess">Login Success</string>
    <string name="passwordStrengthLabel">Password strength:</string>
    <string name="successDelete">Password deleted successfully</string>
    <string name="passwordLabel">Passwords</string>
</resources>