<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:id="@+id/main_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleInput"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/passswordInput"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/passwordStrengthBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/passwordStrengthLabel" />
        <ProgressBar
            android:id="@+id/passwordStrengthBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@android:color/holo_red_light" />
        <Button
            android:id="@+id/buttonTogglePassword"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/show_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/passwordOptions"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:background="@drawable/password_options_box">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxUppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uppercaseOption" />

                <CheckBox
                    android:id="@+id/checkBoxDigits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbersOption" />

                <CheckBox
                    android:id="@+id/checkBoxSpecialChars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialCharOption" />

                <TextView
                    android:id="@+id/lengthTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/lengthTag" />
                <SeekBar
                    android:id="@+id/seekBarPasswordLength"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="50"
                    android:progress="20" />
            </LinearLayout>

            <!-- Botón al lado de los CheckBoxes -->
            <Button
                android:id="@+id/generateButton"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/generateButton" />
        </LinearLayout>

        <!-- Campo de entrada opcional para la URL -->
        <EditText
            android:id="@+id/editTextURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/urlInput"
            android:inputType="textUri" />

        <!-- Campo de entrada grande opcional para Notas -->
        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:hint="@string/notesInput"
            android:inputType="textMultiLine" />

        <!-- Botón de Guardar -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/saveButton" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/deleteButton"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
